Qt removed Dependecies added to package.json Variable names corrected Timestamp represented as uint64 Removed unused varaibles getThreshold() constructor inside Thresholding.cpp renamed as calculateThreshold() Removed brackets for one line functions Check method implemented Request input from user to exit code Decimals added for double type variables

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	"dependencies": {
 		"hyro_api_channel": "*",
 		"hyro_utils": "*",
-		"hyro_msgs": "*"
+		"hyro_msgs": "*",
+		"hyro_widgets": "*"
 	}
 }
